# stock-app

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: database.py  log.py
data/: test_app.db
lib/: version.py
migrations/: env.py
migrations/versions/: c31fd972cd1d_create_users_table.py
scripts/: linter.sh
stock_app/: main.py  version.py
stock_app/config/: constants.py  database.py  log.py
stock_app/models/: user.py
stock_app/repositories/: user_repository.py
stock_app/schemas/: user.py
stock_app/services/: user.py
tests/: test_app.py
