[tool.poetry]
name = "stock-app"
version = "0.1.0"
description = ""
authors = ["alejovillores <avillores@fi.uba.ar>"]
readme = "README.md"
packages = [{include = "stock_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
importlib-metadata = "^6.8.0"
importlib = "^1.0.4"
alembic = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
